// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`complete homepage should render full page with data 1`] = `
<body>
  <div>
    <main>
      <section
        class="ingredientSearch"
        data-testid="form"
      >
        <label
          class="ingredientSearch__label"
          for="downshift-2-input"
          id="downshift-3-label"
        >
          Choose an ingredient:
        </label>
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-owns="downshift-3-menu"
          class="ingredientSearch__actions"
          role="combobox"
        >
          <input
            aria-autocomplete="list"
            aria-controls="downshift-3-menu"
            aria-labelledby="downshift-3-label"
            autocomplete="off"
            class="ingredientSearch__actions--input"
            id="downshift-2-input"
            value=""
          />
          <button
            aria-label="add ingredient"
            class="ingredientSearch__actions--button"
            type="button"
          >
            +
          </button>
        </div>
        <ul
          aria-labelledby="downshift-3-label"
          class="ingredientSearch__list"
          id="downshift-3-menu"
          role="listbox"
        />
      </section>
      <section
        data-testid="ingredients"
      >
        <ul
          class="ingredientList"
        />
      </section>
      <ul
        class="recipeList"
        data-testid="recipes"
      />
    </main>
  </div>
</body>
`;

exports[`complete homepage should render full page without data 1`] = `
<body>
  <div>
    <main>
      <section
        class="ingredientSearch"
        data-testid="form"
      >
        <label
          class="ingredientSearch__label"
          for="downshift-0-input"
          id="downshift-1-label"
        >
          Choose an ingredient:
        </label>
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-owns="downshift-1-menu"
          class="ingredientSearch__actions"
          role="combobox"
        >
          <input
            aria-autocomplete="list"
            aria-controls="downshift-1-menu"
            aria-labelledby="downshift-1-label"
            autocomplete="off"
            class="ingredientSearch__actions--input"
            id="downshift-0-input"
            value=""
          />
          <button
            aria-label="add ingredient"
            class="ingredientSearch__actions--button"
            type="button"
          >
            +
          </button>
        </div>
        <ul
          aria-labelledby="downshift-1-label"
          class="ingredientSearch__list"
          id="downshift-1-menu"
          role="listbox"
        />
      </section>
      <section
        data-testid="ingredients"
      >
        <ul
          class="ingredientList"
        />
      </section>
      <ul
        class="recipeList"
        data-testid="recipes"
      />
    </main>
  </div>
</body>
`;
